--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "main": "app.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon app"
+    "start": "nodemon app"
   },
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "hbs": "^4.0.1",
     "pg": "^7.3.0",
-    "pg-hstore": "^2.3.2",
     "sequelize": "^4.20.3",
     "sequelize-cli": "^3.0.0"
   },
