--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "hbs": "^4.0.1",
     "pg": "^7.3.0",
-    "sequelize": "^4.20.3",
-    "sequelize-cli": "^3.0.0"
+    "sequelize": "^4.20.3"
   },
   "devDependencies": {
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "sequelize-cli": "^3.0.0"
   }
 }
